<resources>
    <string name="app_name" translatable="false">A1L1_Intro</string>
    <string name="coat_of_arms">Герб</string>
    <string name="saint_petersburg">Санкт-Петербург</string>
    <string name="show_humidity">Показывать влажность</string>
    <string name="show_overcast">Показывать облачность</string>
    <string name="show_humidity_short">Показ. влажность</string>
    <string name="show_overcast_short">Показ. облачность</string>
    <string name="humidity">Влажность:</string>
    <string name="overcast">Облачность:</string>
    <string name="show_weather">Показать погоду</string>
    <string name="more_details">Подробнее</string>
    <string name="empty_list">Пустой лист</string>
    <string name="comment">Комментарий</string>
    <string name="save">Сохранить</string>
</resources>